--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,41 @@
-body{
-	background-image: url("assets/images/bg.png");
+*{
+    padding: 0px;
+    margin:0;
+    box-sizing: border-box;
 }
+
+body{
+	background-image: url("../images/bg.png");
+}
+
+.footer{
+	background-color: antiquewhite;
+	}
+
+.footerbox{
+	width: 100%;
+	height: 0 auto;
+	background-color: antiquewhite;
+	bottom:0;
+	margin-left: 0;
+	margin-right: 0;
+	margin-bottom: 0;
+	clear: both;
+}
+.footer p{
+display: flex;
+justify-content: center;
+color:grey;
+}
+
+.nav{
+	background-color: lightgrey;
+}
+.navbg{
+	background-color: antiquewhite;
+}
+
+.link{
+	background-color: lightgrey;
+}
+
