--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,21 +5,21 @@
 }
 
 body{
-	background-image: url("../images/bg.png");
+	background-image: url("../images/bg8.png");
 }
 
 .footer{
-	background-color: antiquewhite;
+
+	background-image: url("../images/bg5.png");
+	border-top: 2px solid white;
 	}
 
 .footerbox{
 	width: 100%;
 	height: 0 auto;
-	background-color: antiquewhite;
 	bottom:0;
-	margin-left: 0;
-	margin-right: 0;
 	margin-bottom: 0;
+	position: absolute;
 	clear: both;
 }
 .footer p{
@@ -29,13 +29,25 @@ color:grey;
 }
 
 .nav{
-	background-color: lightgrey;
+	background-color: white;
 }
 .navbg{
-	background-color: antiquewhite;
+	background-color: lightgrey;
+	border-bottom: 2px solid white;
+	background-image: url("../images/bg5.png");
 }
 
 .link{
-	background-color: lightgrey;
+	
+	box-shadow: 5px 5px 5px grey;
+	border:1px solid lightgrey;
+	background-image: url("../images/bg5.png");
+}
+.storybox{
+	
+	padding-bottom:50px;
+	box-shadow: 5px 5px 5px grey;
+	border:1px solid white;
+	background-image: url("../images/bg5.png");
 }
 
